src/objects/EscalationTeam__c.object
<CustomObject>
    <description>The joining of an Contact or User to an Escalation</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact associated with the escalation</description>
        <inlineHelpText>The contact associated with the escalation</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Escalation Teams</relationshipLabel>
        <relationshipName>Escalation_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The email associated with the escalation</description>
        <inlineHelpText>The email associated with the escalation</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <description>The escalation the team member is associated with</description>
        <inlineHelpText>The escalation the team member is associated with</inlineHelpText>
        <label>Escalation</label>
        <referenceTo>Escalation__c</referenceTo>
        <relationshipLabel>Escalation Teams</relationshipLabel>
        <relationshipName>Escalation_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the team member is considered internal</description>
        <inlineHelpText>If the team member is considered internal</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of the team member</description>
        <formula>IF(NOT ISBLANK( User__c ), &apos;User&apos;, IF(NOT ISBLANK( Contact__c ), &apos;Contact&apos;, &apos;Email&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of the team member</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user associated with the escalation</description>
        <inlineHelpText>The user associated with the escalation</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Escalation_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Escalation Team</label>
    <nameField>
        <displayFormat>ETN-{00000}</displayFormat>
        <label>Escalation Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>One_contact_point_set</fullName>
        <active>true</active>
        <description>Ensure that there is only one point of contact set</description>
        <errorConditionFormula>(IF(AND(AND(NOT ISBLANK(User__c), ISBLANK(Contact__c)), ISBLANK(Email__c )),1,0) +
IF(AND(AND(ISBLANK(User__c), NOT ISBLANK(Contact__c)), ISBLANK(Email__c )),1,0) +
IF(AND(AND(ISBLANK(User__c), ISBLANK(Contact__c)), NOT ISBLANK(Email__c )),1,0)) != 1</errorConditionFormula>
        <errorMessage>Only one point of contact can be set</errorMessage>
    </validationRules>
</CustomObject>